--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -5,3 +5,9 @@
     padding: 10px 15px;
     /* box-shadow: 1px 3px 9px rgba(#000); */
 }
+
+@media(max-width:576px){
+    .input{
+        width: 80%;
+    }
+}
