--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .active {
-    color: #0b5ed7 !important;
+    color: #198754 !important;
     font-weight: bold;
-    border-bottom: 3px solid #0b5ed7;
+    border-bottom: 3px solid #198754;
+  }
+  .img{
+    width: 170px;
+    height: 70px;
+
   }
